<resources>
    <string name="app_name">InClass03</string>
    <string name="welcome">Welcome !!</string>
    <string name="register_label">Register</string>
    <string name="name_label">Name:</string>
    <string name="email_label">Email:</string>
    <string name="id_label">ID:</string>
    <string name="dept_label">Dept:</string>
    <string name="select_label">Select</string>
    <string name="submit_label">Submit</string>
    <string name="cancel_label">Cancel</string>
    <string name="cs_label">Computer Science</string>
    <string name="ss_label">Software info. Systems</string>
    <string name="bi_label">Bio Informatics</string>
    <string name="ds_label">Data Science</string>
</resources>